--- a/package.json
+++ b/package.json
@@ -1,13 +1,12 @@
 {
-  "name": "game-engine",
+  "name": "typescript-ecs",
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "start": "npm run typescript && webpack-dev-server",
-    "build": "npm run typescript && webpack",
-    "typescript": "npm run lint && npm run format && tsc",
+    "start": "npm run build && webpack serve --mode development --open",
+    "build": "npm run lint && npm run format && tsc && webpack --mode production",
     "lint": "eslint \"src/**/*.{cjs,mjs,js,jsx,ts,tsx,mts,cts}\" --quiet --fix",
-    "format": "prettier --write \"src/**/*.{cjs,mjs,js,jsx,ts,tsx,mts,cts,json,html,css}\" \"src/**/*.{cjs,mjs,js,jsx,ts,tsx,mts,cts,json,html,css}\"",
+    "format": "prettier --write \"src/**/*.{cjs,mjs,js,jsx,ts,tsx,mts,cts,json,html,css}\"",
     "update": "ncu -u"
   },
   "browserslist": {
@@ -23,32 +22,31 @@
     ]
   },
   "devDependencies": {
-    "@babel/cli": "^7.24.7",
-    "@babel/core": "^7.24.7",
-    "@babel/preset-env": "^7.24.7",
-    "@babel/preset-react": "^7.24.7",
-    "@babel/preset-typescript": "^7.24.7",
-    "@types/lodash": "^4.17.5",
-    "@types/p5": "^1.7.6",
-    "@types/react": "^18.3.3",
-    "@types/react-dom": "^18.3.0",
-    "@typescript-eslint/eslint-plugin": "^7.13.0",
-    "babel-loader": "^9.1.3",
-    "eslint": "^8.55.0",
-    "eslint-config-prettier": "^9.1.0",
-    "html-webpack-plugin": "^5.6.0",
-    "npm": "^10.8.1",
-    "npm-check-updates": "^16.14.20",
-    "prettier": "^3.3.2",
-    "typescript": "^5.4.5",
-    "webpack": "^5.92.0",
-    "webpack-cli": "^5.1.4",
-    "webpack-dev-server": "^5.0.4"
+    "@babel/cli": "7.x",
+    "@babel/core": "7.x",
+    "@babel/preset-env": "7.x",
+    "@babel/preset-react": "7.x",
+    "@babel/preset-typescript": "7.x",
+    "@types/lodash": "4.x",
+    "@types/p5": "1.x",
+    "@types/react": "18.x",
+    "@types/react-dom": "18.x",
+    "babel-loader": "10.x",
+    "css-loader": "7.x",
+    "eslint": "9.38.x",
+    "html-webpack-plugin": "5.x",
+    "npm-check-updates": "19.x",
+    "prettier": "3.x",
+    "style-loader": "4.x",
+    "typescript": "5.x",
+    "typescript-eslint": "8.x",
+    "webpack": "5.x",
+    "webpack-cli": "6.x",
+    "webpack-dev-server": "5.x"
   },
   "dependencies": {
     "@p5-wrapper/react": "^4.4.2",
-    "p5": "^1.9.4",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react": "18.x",
+    "react-dom": "18.x"
   }
 }
