--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "webpack-dev-server": "5.x"
   },
   "dependencies": {
-    "@p5-wrapper/react": "^4.4.2",
+    "@p5-wrapper/react": "4.x",
     "react": "18.x",
     "react-dom": "18.x"
   }
