Update to use Phaser instead of P5js

--- a/package.json
+++ b/package.json
@@ -28,7 +28,6 @@
     "@babel/preset-react": "7.x",
     "@babel/preset-typescript": "7.x",
     "@types/lodash": "4.x",
-    "@types/p5": "1.x",
     "@types/react": "18.x",
     "@types/react-dom": "18.x",
     "babel-loader": "10.x",
@@ -45,7 +44,7 @@
     "webpack-dev-server": "5.x"
   },
   "dependencies": {
-    "@p5-wrapper/react": "4.x",
+    "phaser": "3.x",
     "react": "18.x",
     "react-dom": "18.x"
   }
